--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,4 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-MYTMDBOPENAPIKEY="0d2d5a67e86ecf1975a0c9314b5100c3"
+MYTMDBOPENAPIKEY="EnterYourKeyHere"
